--- a/blog-project/index.html
+++ b/blog-project/index.html
@@ -1,15 +1,15 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" href="https://use.typekit.net/sih8uza.css">
-    <title>Robert Des/Dev</title>
-  </head>
+    <title>Portafolio</title>
+</head>
 
-  <body id="root">
+<body id="root">
 
 
-    <script type="module" src="./src/main.jsx"></script>
-  </body>
+<script type="module" src="src/main.jsx"></script>
+</body>
 </html>
